littlelink/littlelink-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: littlelink
  namespace: littlelink
  labels:
    app: littlelink
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`links.yourdomain.com`)
      kind: Rule
      services:
        - name: littlelink
          port: 8080
  tls:
    certResolver: le
